@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2017, 2019 IBM Corp. and others
+ * Copyright (c) 2017, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -344,7 +344,7 @@ public class cTypeTests {
 
    private void subtest012(String s[]) {
       boolean bool = false;
-      Double d = new Double(1.1);
+      Double d = Double.valueOf(1.1);
       Object o = d;
       o = s;
       try {
