@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2015, 2018 IBM Corp. and others
+ * Copyright (c) 2015, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -98,7 +98,7 @@ public class FieldUtilities  {
 				case "long": f.setLong(testObject, longValue + fieldCount);
 				break;
 				case "Object": {
-					f.set(testObject, new Integer(fieldCount));
+					f.set(testObject, Integer.valueOf(fieldCount));
 				}
 				break;
 				default: if (strict) {
