@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2017, 2018 IBM Corp. and others
+ * Copyright (c) 2017, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -76,14 +76,14 @@ public class ActiveIdleTest {
 					switch (name) {
 						case BUSY_PERIOD:
 							if (value != null) {
-								busyPeriod = Long.valueOf(value).longValue();
+								busyPeriod = Long.parseLong(value);
 							} else {
 								parseResult = ParseResult.OPTION_MISSING_VALUE;
 							}
 							break;
 						case IDLE_PERIOD:
 							if (value != null) {
-								idlePeriod = Long.valueOf(value).longValue();
+								idlePeriod = Long.parseLong(value);
 							} else {
 								parseResult = ParseResult.OPTION_MISSING_VALUE;
 							}
@@ -152,7 +152,7 @@ public class ActiveIdleTest {
 			// create a list of numbers
 			for (int i = 0; i < 1000; i++) {
 				long number = System.nanoTime() % 1000000;
-				list.add(new Long(number));
+				list.add(Long.valueOf(number));
 			}
 
 			// find the prime numbers in the list
